// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compile Contract Contract 1 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 51))
            storage (list (\\"Compilation.test.ts\\" 53) )
            storage_type ((list \\"nat\\"))
            messages ((ep1 True False False True (\\"Compilation.test.ts\\" 59) ((set_type (params (\\"Compilation.test.ts\\" 59)) (list \\"nat\\") (\\"Compilation.test.ts\\" 72)) (defineLocal \\"some_address\\" (literal (address tz1) (\\"Compilation.test.ts\\" 62)) True (\\"Compilation.test.ts\\" 62)) (verify (eq (getLocal \\"some_address\\" (\\"Compilation.test.ts\\" 62)) (sender) (\\"comparison.ts\\" 6)) (literal (string \\"Not Admin!\\") (\\"Compilation.test.ts\\" 62)) (\\"Compilation.test.ts\\" 62)) (set (data) (params (\\"Compilation.test.ts\\" 59)) (\\"Compilation.test.ts\\" 62)))))
            flags ((erase-comments))
            privates ()
            views ((onchain view True (\\"Compilation.test.ts\\" 71) False \\"\\" ((set_type (params (\\"Compilation.test.ts\\" 71)) \\"unit\\" (\\"Compilation.test.ts\\" 72)) (result (params (\\"Compilation.test.ts\\" 71)) (\\"Compilation.test.ts\\" 71)))))
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 100) (\\"Compilation.test.ts\\" 55))
        )
        "
`;

exports[`Compile Contract Contract 1 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"list\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"list\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\"
                    }
                ],
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CAR\\"
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"address\\"
                        },
                        {
                            \\"string\\": \\"tz1\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SENDER\\"
                },
                {
                    \\"prim\\": \\"COMPARE\\"
                },
                {
                    \\"prim\\": \\"EQ\\"
                },
                {
                    \\"prim\\": \\"IF\\",
                    \\"args\\": [
                        [],
                        [
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"string\\"
                                    },
                                    {
                                        \\"string\\": \\"Not Admin!\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"FAILWITH\\"
                            }
                        ]
                    ]
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    },
    {
        \\"prim\\": \\"view\\",
        \\"args\\": [
            {
                \\"string\\": \\"view\\"
            },
            {
                \\"prim\\": \\"unit\\"
            },
            {
                \\"prim\\": \\"unit\\"
            },
            [
                {
                    \\"prim\\": \\"CAR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Compile Contract Storage (None) 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 92))
            storage (variant \\"None\\" (unit) (\\"Compilation.test.ts\\" 92))
            storage_type ((option \\"nat\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"Compilation.test.ts\\" 92))
        )
        "
`;

exports[`Compile Contract Storage (None) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CDR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Compile Contract Storage (Record) 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 99))
            storage (record (\\"Compilation.test.ts\\" 101) (testField1 (literal (nat 1) (\\"Compilation.test.ts\\" 102))) (testField2 (list (\\"Compilation.test.ts\\" 103) (literal (string \\"Hello World\\") (\\"Compilation.test.ts\\" 103)))))
            storage_type (())
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"Compilation.test.ts\\" 99))
        )
        "
`;

exports[`Compile Contract Storage (Record) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"pair\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\",
                        \\"annots\\": [
                            \\"%testField1\\"
                        ]
                    },
                    {
                        \\"prim\\": \\"list\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"string\\"
                            }
                        ],
                        \\"annots\\": [
                            \\"%testField2\\"
                        ]
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CDR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Compile Contract Storage (Some) 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 86))
            storage (variant \\"Some\\" (literal (nat 1) (\\"Compilation.test.ts\\" 86)) (\\"Compilation.test.ts\\" 86))
            storage_type (())
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"Compilation.test.ts\\" 86))
        )
        "
`;

exports[`Compile Contract Storage (Some) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CDR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Compile Contract Storage (Unit) 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 79))
            storage (unit)
            storage_type (())
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"Compilation.test.ts\\" 79))
        )
        "
`;

exports[`Compile Contract Storage (Unit) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CDR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Compile Lambdas  A Lambda that returns "YES" if the argument is greater than or equal to Nat(10), returns "NO" otherwise 1`] = `"(lambda 2 None False \\"lambda_arg\\" (\\"Compilation.test.ts\\" 36) ((ifBlock (ge (lambdaParams 2 \\"lambda_arg\\" (\\"Compilation.test.ts\\" 36) (unknown 0)) (literal (nat 1) (\\"Compilation.test.ts\\" 37)) (\\"comparison.ts\\" 21)) ((result (literal (string \\"YES\\") (\\"Compilation.test.ts\\" 37)) (\\"Compilation.test.ts\\" 37))) (\\"Compilation.test.ts\\" 37)) (elseBlock ((result (literal (string \\"NO\\") (\\"Compilation.test.ts\\" 37)) (\\"Compilation.test.ts\\" 37))))))"`;

exports[`Compile Lambdas  A Lambda that returns "YES" if the argument is greater than or equal to Nat(10), returns "NO" otherwise 2`] = `
"{
    \\"micheline\\": \\"{ PUSH nat 1; SWAP; COMPARE; GE; IF { PUSH string \\\\\\"YES\\\\\\" } { PUSH string \\\\\\"NO\\\\\\" } }\\",
    \\"json\\": [
        {
            \\"prim\\": \\"PUSH\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"nat\\"
                },
                {
                    \\"int\\": \\"1\\"
                }
            ]
        },
        {
            \\"prim\\": \\"SWAP\\"
        },
        {
            \\"prim\\": \\"COMPARE\\"
        },
        {
            \\"prim\\": \\"GE\\"
        },
        {
            \\"prim\\": \\"IF\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"string\\"
                            },
                            {
                                \\"string\\": \\"YES\\"
                            }
                        ]
                    }
                ],
                [
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"string\\"
                            },
                            {
                                \\"string\\": \\"NO\\"
                            }
                        ]
                    }
                ]
            ]
        }
    ]
}"
`;

exports[`Compile Lambdas A Lambda that returns the argument 1`] = `"(lambda 1 None False \\"lambda_arg\\" (\\"Compilation.test.ts\\" 24) ((ifBlock (eq (lambdaParams 1 \\"lambda_arg\\" (\\"Compilation.test.ts\\" 24) (unknown 0)) (literal (string \\"TEST\\") (\\"Compilation.test.ts\\" 25)) (\\"comparison.ts\\" 6)) ((result (lambdaParams 1 \\"lambda_arg\\" (\\"Compilation.test.ts\\" 24) (unknown 0)) (\\"Compilation.test.ts\\" 25))) (\\"Compilation.test.ts\\" 25)) (elseBlock ((failwith (lambdaParams 1 \\"lambda_arg\\" (\\"Compilation.test.ts\\" 24) (unknown 0)) (\\"Compilation.test.ts\\" 25))))))"`;

exports[`Compile Lambdas A Lambda that returns the argument 2`] = `
"{
    \\"micheline\\": \\"{ DUP; PUSH string \\\\\\"TEST\\\\\\"; COMPARE; EQ; IF {} { FAILWITH } }\\",
    \\"json\\": [
        {
            \\"prim\\": \\"DUP\\"
        },
        {
            \\"prim\\": \\"PUSH\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"string\\"
                },
                {
                    \\"string\\": \\"TEST\\"
                }
            ]
        },
        {
            \\"prim\\": \\"COMPARE\\"
        },
        {
            \\"prim\\": \\"EQ\\"
        },
        {
            \\"prim\\": \\"IF\\",
            \\"args\\": [
                [],
                [
                    {
                        \\"prim\\": \\"FAILWITH\\"
                    }
                ]
            ]
        }
    ]
}"
`;
